// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blocks raw handling pasteHandler gutenberg 1`] = `"Test"`;

exports[`Blocks raw handling pasteHandler iframe-embed 1`] = `""`;

exports[`Blocks raw handling pasteHandler should remove extra blank lines 1`] = `
"<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->"
`;

exports[`Blocks raw handling pasteHandler should strip HTML formatting space from inline text 1`] = `"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent a elit eget tortor molestie egestas. Donec pretium urna vitae mattis imperdiet. Praesent et lorem iaculis, volutpat odio vitae, ornare lacus. Donec ut felis tristique, pharetra erat id, viverra justo. Integer sit amet elementum arcu, eget pharetra felis. In malesuada enim est, sed placerat nulla feugiat at. Vestibulum feugiat vitae elit sit amet tincidunt. Pellentesque finibus sed dolor non facilisis. Curabitur accumsan ante ac hendrerit vestibulum."`;

exports[`Blocks raw handling pasteHandler should strip some text-level elements 1`] = `
"<!-- wp:paragraph -->
<p>This is ncorect</p>
<!-- /wp:paragraph -->"
`;

exports[`Blocks raw handling pasteHandler should strip windows data 1`] = `
"<!-- wp:heading -->
<h2 class="wp-block-heading">Heading Win</h2>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>Paragraph Win</p>
<!-- /wp:paragraph -->"
`;

exports[`Blocks raw handling should correctly handle quotes with mixed content 1`] = `
"<!-- wp:quote -->
<blockquote class="wp-block-quote"><!-- wp:heading {"level":1} -->
<h1 class="wp-block-heading">chicken</h1>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>ribs</p>
<!-- /wp:paragraph --></blockquote>
<!-- /wp:quote -->"
`;

exports[`rawHandler should convert HTML post to blocks with minimal content changes 1`] = `
"<!-- wp:heading -->
<h2 class="wp-block-heading">Howdy</h2>
<!-- /wp:heading -->

<!-- wp:image -->
<figure class="wp-block-image"><img src="https://w.org" alt=""/></figure>
<!-- /wp:image -->

<!-- wp:paragraph -->
<p>This is a paragraph.</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Preserve <span style="color:red">me</span>!</p>
<!-- /wp:paragraph -->

<!-- wp:heading {"level":3} -->
<h3 class="wp-block-heading">More tag</h3>
<!-- /wp:heading -->

<!-- wp:more -->
<!--more-->
<!-- /wp:more -->

<!-- wp:heading {"level":3} -->
<h3 class="wp-block-heading">Shortcode</h3>
<!-- /wp:heading -->

<!-- wp:gallery {"columns":3,"linkTo":"none"} -->
<figure class="wp-block-gallery has-nested-images columns-3 is-cropped"><!-- wp:image {"id":1} -->
<figure class="wp-block-image"><img alt="" class="wp-image-1"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->

<!-- wp:html -->
<dl>
	<dt>Term</dt>
	<dd>
		Description.
	</dd>
</dl>
<!-- /wp:html -->

<!-- wp:list {"ordered":true} -->
<ol><!-- wp:list-item -->
<li>Item</li>
<!-- /wp:list-item --></ol>
<!-- /wp:list -->

<!-- wp:quote -->
<blockquote class="wp-block-quote"><!-- wp:paragraph -->
<p>Text.</p>
<!-- /wp:paragraph --></blockquote>
<!-- /wp:quote -->

<!-- wp:quote -->
<blockquote class="wp-block-quote"><!-- wp:heading {"level":1} -->
<h1 class="wp-block-heading">Heading</h1>
<!-- /wp:heading -->

<!-- wp:paragraph -->
<p>Text.</p>
<!-- /wp:paragraph --></blockquote>
<!-- /wp:quote -->"
`;

exports[`rawHandler should convert a caption shortcode 1`] = `
"<!-- wp:image {"id":122} -->
<figure class="wp-block-image"><img src="image.png" alt="" class="wp-image-122"/></figure>
<!-- /wp:image -->

<!-- wp:paragraph -->
<p>[caption id="attachment_122" align="alignnone" width="300"] test[/caption]</p>
<!-- /wp:paragraph -->"
`;

exports[`rawHandler should convert a caption shortcode with caption 1`] = `
"<!-- wp:image {"id":122} -->
<figure class="wp-block-image"><img src="image.png" alt="" class="wp-image-122"/></figure>
<!-- /wp:image -->

<!-- wp:paragraph -->
<p>[caption id="attachment_122" align="alignnone" width="300"] <a href="https://w.org">test</a>[/caption]</p>
<!-- /wp:paragraph -->"
`;

exports[`rawHandler should convert a caption shortcode with link 1`] = `
"<!-- wp:paragraph -->
<p>[caption id="attachment_754" align="alignnone" width="604"]</p>
<!-- /wp:paragraph -->

<!-- wp:image {"id":754,"linkDestination":"custom"} -->
<figure class="wp-block-image"><a href="http://build.wordpress-develop.test/wp-content/uploads/2011/07/100_5478.jpg"><img src="http://build.wordpress-develop.test/wp-content/uploads/2011/07/100_5478.jpg?w=604" alt="Bell on Wharf" class="wp-image-754"/></a></figure>
<!-- /wp:image -->

<!-- wp:paragraph -->
<p> Bell on wharf in San Francisco[/caption]</p>
<!-- /wp:paragraph -->"
`;

exports[`rawHandler should convert a list with attributes 1`] = `
"<!-- wp:list {"ordered":true,"type":"lower-roman","start":2,"reversed":true} -->
<ol reversed start="2" style="list-style-type:lower-roman"><!-- wp:list-item -->
<li>1<!-- wp:list {"ordered":true,"type":"lower-roman","start":2,"reversed":true} -->
<ol reversed start="2" style="list-style-type:lower-roman"><!-- wp:list-item -->
<li>1</li>
<!-- /wp:list-item --></ol>
<!-- /wp:list --></li>
<!-- /wp:list-item --></ol>
<!-- /wp:list -->"
`;

exports[`rawHandler should convert to unsupported HTML block when no transformation is available 1`] = `
"<!-- wp:html -->
<div><p>Hello world!</p></div>
<!-- /wp:html -->"
`;

exports[`rawHandler should not strip any text-level elements 1`] = `
"<!-- wp:paragraph -->
<p>This is <u>ncorect</u></p>
<!-- /wp:paragraph -->"
`;

exports[`rawHandler should preserve alignment 1`] = `
"<!-- wp:paragraph -->
<p>center</p>
<!-- /wp:paragraph -->"
`;
